Split ASR post in two

--- a/_posts/2020-07-21-asr-wfst.md
+++ b/_posts/2020-07-21-asr-wfst.md
@@ -1,5 +1,6 @@
 ---
-title: Automatic Speech Recognition with WFSTs
+title: ASR with Weighted Finite State Transducers
+last_modified_at: 2020-07-2eT23:45:00-03:00
 mathjax: True
 classes: wide
 header:
@@ -30,43 +31,11 @@ table:nth-of-type(1) {
 </style>
 
 
-Automatic Speech Recognition (ASR) systems convert speech from a recorded audio signal to text. An ASR system aims to infer the original words given an observable signal, most commonly following a probabilistic approach [[1]](#references). 
+In [this post](/_posts/2020-07-21-ast-decoding.md), the subject of decoders for Automatic Speech Recognition was introduced, presenting the task of searching for the best word sequence given an audio observation. One solution for that involves the use of Weighted Finite State Transducers (WFSTs). This post is theory heavy, so don't worry if you don't understand all of it on first try (I certainly didn't).
 
-![ASRtest](/assets/images/ASRtest.png)  
-**Figure 1:** Diagram of an ASR system.
-{: style="font-size: 80%; text-align: center;"}
-{: #fig1}
+WFSTs are static graphs encoding the whole word-sequence search space. They contain many levels of information, going from the acoustic model to phones in context, to single phonemes, to words, and finally, words in sequence.
 
-The input audio is split into overlapping frames of 25ms shifted by 10ms, so that within this tiny time window, the speech signal is considered to be stationary, allowing for the analysis featured here. Before decoding, these are fed to a feature extractor, which reduces signal dimensionality and extracts the most relevant information, that is, the linguistic message.
-
-Decoding is the process of calculating which sequence of words is most likely to match the acoustic signal represented by the feature vectors [[1]](#references). Decoding is executed based on three sources of information:
-
-* **Acoustic model:** An ensemble of HMMs representing words or phonemes;
-* **Language model:** A list of word sequence probabilities;
-* **Lexicon:** A dictionary of words and their respective phonemes.
-
-During decoding, we essentially use these to try to predict the word sequence $\hat{W}$ that best matches the acoustic observation $\boldsymbol{X}=X_1 X_2\ldots X_n$, as seen in
-
-$$
-\begin{equation*}
-\begin{split}
-\boldsymbol{\hat{W}} &= arg\max_{\boldsymbol{W}}P(\boldsymbol{W}\mid \boldsymbol{X})\\
-    &= arg\max_{\boldsymbol{W}}\frac{P(\boldsymbol{X}\mid \boldsymbol{W})P(\boldsymbol{W})}{P(\boldsymbol{X})}\\
-    &\propto arg\max_{\boldsymbol{W}} (\underbrace{P(\boldsymbol{X} \mid \boldsymbol{W})}_{\substack{\text{Acoustic} \\ \text{model}}} \underbrace{P(\boldsymbol{W})}_{\substack{\text{Language} \\ \text{model}}})
-\end{split}
-\end{equation*}
-$$
-
-The acoustic analysis is performed by a Deep Neural Network, which is trained to output the posterior probability of obtaining this observation given a candidate word sequence. The prior probability of a word sequence is obtained from a language model, containing the allowed and most frequent occurrences for a given language. Therefore, prior probability and posterior likelihood are combined in order to output the best prediction with the available information.
-
-One solution for the search of the best word sequence involves the use of WFSTs, presented in the following section.
-  
-Weighted Finite State Transducers
-----------
-
-Weighted Finite State Transducers (WFSTs) are static graphs encoding the whole word-sequence search space. They contain many levels of information, going from the acoustic model to phones in context, to single phonemes, to words, and finally, words in sequence.
-
-A finite-state transducer is a finite automaton whose state transitions are labeled with both input and output symbols. Therefore, a path through the transducer encodes a mapping from an input to an output string. They provide a common and natural representation for major components of speech recognition systems, including Hidden Markov Models (HMMs), context-dependency models, pronunciation dictionaries, statistical grammars and word or phone lattices [[2]](#references). The decoder goes through the WFST creating a lattice, a graph structure that contains the most probable - or less costly - paths for a given utterance (a continuous piece of speech beginning and ending with a clear pause), taking into account both acoustic and language costs.
+A finite-state transducer is a finite automaton whose state transitions are labeled with both input and output symbols. Therefore, a path through the transducer encodes a mapping from an input to an output string. They provide a common and natural representation for major components of speech recognition systems, including Hidden Markov Models (HMMs), context-dependency models, pronunciation dictionaries, statistical grammars and word or phone lattices [[1]](#references). The decoder goes through the WFST creating a lattice, a graph structure that contains the most probable - or less costly - paths for a given utterance (a continuous piece of speech beginning and ending with a clear pause), taking into account both acoustic and language costs.
 
 A transducer $T=(\mathcal{A}, \mathcal{B}, \mathcal{Q}, I, F, E, \lambda, \rho)$ over a semiring $\mathbb{K}$ is characterized by:
 
@@ -79,9 +48,9 @@ A transducer $T=(\mathcal{A}, \mathcal{B}, \mathcal{Q}, I, F, E, \lambda, \rho)$
 * $\lambda$: initial state weight assignment;
 * $\rho$: final state weight assignment.
 
-The set of transitions is $E\subseteq\bar{E}=\mathcal{Q}\times(\mathcal{A}\cup\{\epsilon\})\times(\mathcal{B}\cup\{\epsilon\})\times\mathbb{K}\times\mathcal{Q}$. This means it is a subset of all possibilities of transition from one state to another (or to itself) with an input label, an output label and a weight.
+The set of transitions is $E\subseteq\bar{E}=\mathcal{Q}\times(\mathcal{A}\cup\{\epsilon\})\times(\mathcal{B}\cup\{\epsilon\})\times\mathbb{K}\times\mathcal{Q}$. This means it is a subset of all possibilities of transition from one state to another (or to itself) with an input label, an output label and a weight. $\epsilon$ means an empty label, no input or no output.
 
-The operations are executed on specific *semirings*. A semiring is a set $\mathbb{R}$ equipped with two binary operators addition ($\oplus$) and multiplication ($\otimes$), with identity elements $\bar{0}$ and $\bar{1}$, respectively. One simple example of a semiring is the set of natural numbers (including zero) under ordinary addition and multiplication [[3]](#references). Two commonly used semirings in ASR are the *probability semiring* and the *log semiring*, shown in [Table 1](#tab1).
+The operations are executed on specific *semirings*. A semiring is a set $\mathbb{R}$ equipped with two binary operators addition ($\oplus$) and multiplication ($\otimes$), with identity elements $\bar{0}$ and $\bar{1}$, respectively. One simple example of a semiring is the set of natural numbers (including zero) under ordinary addition and multiplication [[2]](#references). Two commonly used semirings in ASR are the *probability semiring* and the *log semiring*, shown in [Table 1](#tab1).
 
 | SEMIRING | SET | $\oplus$ | $\otimes$ | $\bar{0}$ | $\bar{1}$ |
 |:---:|:---:|:---:|:---:|:---:|:---:|
@@ -97,7 +66,7 @@ There is a set of operations we can perform on transducers. The main ones are th
 * **Determinization:** Making an automaton deterministic, that is, each state should have at most one transition with any given input label, which should not be the empty ($\epsilon$) symbols;
 * **Minimization:** Reducing the size of a deterministic automaton.
 
-An usual Kaldi decoder contains a set of four WFSTs which are combined (or composed, as explained in later sections): HMM-level, Context Dependency, Pronunciation Lexicon and Grammar. The mapping from input to output across transducers is shown in [Figure 2](#fig2).
+A widely used toolkit for ASR is Kaldi [[3]](#references). A usual decoder in Kaldi contains a set of four WFSTs which are combined (or composed, as explained in later sections): HMM-level, Context Dependency, Pronunciation Lexicon and Grammar. The mapping from input to output across transducers is shown in [Figure 2](#fig2).
 
 ![hclg](/assets/images/hclg.png)  
 **Figure 2:** Mapping of input and output across transducers.
@@ -140,7 +109,7 @@ Below is a visual example of graph growth with composition of H, C, L and G tran
 The operation of composition essentially consists in checking transitions in both input transducers and adding an arc to the output graph whenever the output label of the first transducer matches the input of the second one. This creates a mapping between the input of $T_1$ and the output of $T_2$. A visual example, also from [[2]](#references), is shown in [Figure 8](#fig8).
 
 ![composition](/assets/images/composition.png)  
-**Figure 8:** Example of a basic transducer composition [[2]](#references). The upper left transducer is $T_1$, the upper right one is $T_2$, and the graph below them is the result.
+**Figure 8:** Example of a basic transducer composition [[1]](#references). The upper left transducer is $T_1$, the upper right one is $T_2$, and the graph below them is the result.
 {: style="font-size: 80%; text-align: center;"}
 {: #fig8}
 
@@ -160,17 +129,20 @@ Below is an illustration of decoding operation. For each time frame, visited sta
 
 Kaldi creates a data structure corresponding to a full state-level lattice, so for every arc of $HCLG$ traversed, a separate arc is created in the lattice, with acoustic and graph cost stored separately, as illustrated in [Figure 10](#fig10). This structure is pruned periodically, and the final pruned graph then has its epsilons removed and is determinized [[4]](#references).
 
-More on the theory of weighted finite state transducers can be found in [[2]](#references).
+More on the theory of weighted finite state transducers can be found in [[1]](#references). For more on Kaldi, check out their [documentation page](https://kaldi-asr.org/doc/index.html).
+
 
 ## References
 
-[1] Gruhn, R. E., Minker, W., & Nakamura, S. (2011). Statistical Pronunciation Modeling for Non-Native Speech Processing. Springer Berlin Heidelberg.
 
-[2] Mohri, M., Pereira, F., & Riley, M. (2008). Speech recognition with weighted finite-state transducers. In Springer Handbook of Speech Processing (pp. 559–584). Springer.
+[1] [Mohri, M., Pereira, F., & Riley, M. (2008). Speech recognition with weighted finite-state transducers. In Springer Handbook of Speech Processing (pp. 559–584). Springer.](https://wiki.eecs.yorku.ca/course_archive/2011-12/W/6328/_media/wfst-lvcsr.pdf)
 
-[3] Akian, M., Gaubert, S., & Guterman, A. (2009). Linear independence over tropical semirings and beyond. Contemporary Mathematics, 495, 1.
+[2] [Akian, M., Gaubert, S., & Guterman, A. (2009). Linear independence over tropical semirings and beyond. Contemporary Mathematics, 495, 1.](https://arxiv.org/pdf/0812.3496)
 
-[4] Povey, D., Hannemann, M., Boulianne, G., Burget, L., Ghoshal, A., Janda, M., Karafiát, M., Kombrink, S., Motlı́ček Petr, Qian, Y., & others. (2012). Generating exact lattices in the WFST framework. Acoustics, Speech and Signal Processing (ICASSP), 2012 IEEE International Conference On, 4213–4216.
+[3] [Povey, D., Ghoshal, A., Boulianne, G., Burget, L., Glembek, O., Goel, N., Hannemann, M., Motlicek, P., Qian, Y., Schwarz, P., Silovsky, J., Stemmer, G., & Vesely, K. (2011, December). The Kaldi Speech Recognition Toolkit. IEEE 2011 Workshop on Automatic Speech Recognition and Understanding.](https://infoscience.epfl.ch/record/192584/files/Povey_ASRU2011_2011.pdf)
+
+[4] [Povey, D., Hannemann, M., Boulianne, G., Burget, L., Ghoshal, A., Janda, M., Karafiát, M., Kombrink, S., Motlı́ček Petr, Qian, Y., & others. (2012). Generating exact lattices in the WFST framework. Acoustics, Speech and Signal Processing (ICASSP), 2012 IEEE International Conference On, 4213–4216.](http://www.fit.vutbr.cz/research/groups/speech/publi/2012/povey_icassp2012_0004213.pdf)
+
 
 {% if page.comments %}
 
