Add links, fix cross post links

--- a/_posts/2020-07-21-asr-wfst.md
+++ b/_posts/2020-07-21-asr-wfst.md
@@ -31,11 +31,11 @@ table:nth-of-type(1) {
 </style>
 
 
-In [this post](/_posts/2020-07-21-ast-decoding.md), the subject of decoders for Automatic Speech Recognition was introduced, presenting the task of searching for the best word sequence given an audio observation. One solution for that involves the use of Weighted Finite State Transducers (WFSTs). This post is theory heavy, so don't worry if you don't understand all of it on first try (I certainly didn't).
+In [this post]({% post_url 2020-07-21-asr-decoding %}), the subject of decoders for Automatic Speech Recognition was introduced, presenting the task of searching for the best word sequence given an audio observation. One solution for that involves the use of Weighted Finite State Transducers (WFSTs). This post is theory heavy, so don't worry if you don't understand all of it on first try (I certainly didn't).
 
 WFSTs are static graphs encoding the whole word-sequence search space. They contain many levels of information, going from the acoustic model to phones in context, to single phonemes, to words, and finally, words in sequence.
 
-A finite-state transducer is a finite automaton whose state transitions are labeled with both input and output symbols. Therefore, a path through the transducer encodes a mapping from an input to an output string. They provide a common and natural representation for major components of speech recognition systems, including Hidden Markov Models (HMMs), context-dependency models, pronunciation dictionaries, statistical grammars and word or phone lattices [[1]](#references). The decoder goes through the WFST creating a lattice, a graph structure that contains the most probable - or less costly - paths for a given utterance (a continuous piece of speech beginning and ending with a clear pause), taking into account both acoustic and language costs.
+A finite-state transducer is a [finite automaton](https://en.wikipedia.org/wiki/Deterministic_finite_automaton) whose state transitions are labeled with both input and output symbols. Therefore, a path through the transducer encodes a mapping from an input to an output string. They provide a common and natural representation for major components of speech recognition systems, including [Hidden Markov Models (HMMs)](https://en.wikipedia.org/wiki/Hidden_Markov_model), context-dependency models, pronunciation dictionaries, statistical grammars and word or phone lattices [[1]](#references). The decoder goes through the WFST creating a lattice, a graph structure that contains the most probable - or less costly - paths for a given utterance (a continuous piece of speech beginning and ending with a clear pause), taking into account both acoustic and language costs.
 
 A transducer $T=(\mathcal{A}, \mathcal{B}, \mathcal{Q}, I, F, E, \lambda, \rho)$ over a semiring $\mathbb{K}$ is characterized by:
 
@@ -50,7 +50,7 @@ A transducer $T=(\mathcal{A}, \mathcal{B}, \mathcal{Q}, I, F, E, \lambda, \rho)$
 
 The set of transitions is $E\subseteq\bar{E}=\mathcal{Q}\times(\mathcal{A}\cup\{\epsilon\})\times(\mathcal{B}\cup\{\epsilon\})\times\mathbb{K}\times\mathcal{Q}$. This means it is a subset of all possibilities of transition from one state to another (or to itself) with an input label, an output label and a weight. $\epsilon$ means an empty label, no input or no output.
 
-The operations are executed on specific *semirings*. A semiring is a set $\mathbb{R}$ equipped with two binary operators addition ($\oplus$) and multiplication ($\otimes$), with identity elements $\bar{0}$ and $\bar{1}$, respectively. One simple example of a semiring is the set of natural numbers (including zero) under ordinary addition and multiplication [[2]](#references). Two commonly used semirings in ASR are the *probability semiring* and the *log semiring*, shown in [Table 1](#tab1).
+The operations are executed on specific [*semirings*](https://en.wikipedia.org/wiki/Semiring). A semiring is a set $\mathbb{R}$ equipped with two binary operators addition ($\oplus$) and multiplication ($\otimes$), with identity elements $\bar{0}$ and $\bar{1}$, respectively. One simple example of a semiring is the set of natural numbers (including zero) under ordinary addition and multiplication [[2]](#references). Two commonly used semirings in ASR are the *probability semiring* and the *log semiring*, shown in [Table 1](#tab1).
 
 | SEMIRING | SET | $\oplus$ | $\otimes$ | $\bar{0}$ | $\bar{1}$ |
 |:---:|:---:|:---:|:---:|:---:|:---:|
@@ -66,7 +66,7 @@ There is a set of operations we can perform on transducers. The main ones are th
 * **Determinization:** Making an automaton deterministic, that is, each state should have at most one transition with any given input label, which should not be the empty ($\epsilon$) symbols;
 * **Minimization:** Reducing the size of a deterministic automaton.
 
-A widely used toolkit for ASR is Kaldi [[3]](#references). A usual decoder in Kaldi contains a set of four WFSTs which are combined (or composed, as explained in later sections): HMM-level, Context Dependency, Pronunciation Lexicon and Grammar. The mapping from input to output across transducers is shown in [Figure 1](#fig1).
+A widely used toolkit for ASR is Kaldi [[3]](#references). A usual decoder in Kaldi contains a set of four WFSTs which are combined (or composed, as explained below): HMM-level, Context Dependency, Pronunciation Lexicon and Grammar. The mapping from input to output across transducers is shown in [Figure 1](#fig1).
 
 ![hclg](/assets/images/hclg.png)  
 **Figure 1:** Mapping of input and output across transducers.
@@ -87,7 +87,7 @@ A widely used toolkit for ASR is Kaldi [[3]](#references). A usual decoder in Ka
 
 Essentially, the grammar graph shows us the allowed sequences of words along with the probability of their occurrence. It can be hand crafted through the use of regular expressions, rules or even direct build, but it can most notably be learned from data, creating stochastic $n$-gram models from text corpora.
 
-The lexicon graph, on the other hand, presents the allowed pronunciations for the words. It is the Kleene closure of the union of individual word pronunciations, that is, the set of pronunciations for all word sequences. This means that there are loops in this automaton. For matters of efficiency, output word labels should be placed on the initial transition of words.
+The lexicon graph, on the other hand, presents the allowed pronunciations for the words. It is the [Kleene closure](https://en.wikipedia.org/wiki/Kleene_star) of the union of individual word pronunciations, that is, the set of pronunciations for all word sequences. This means that there are loops in this automaton. For matters of efficiency, output word labels should be placed on the initial transition of words.
 
 Below is a visual example of graph growth with composition of H, C, L and G transducers.
 
@@ -106,7 +106,7 @@ Below is a visual example of graph growth with composition of H, C, L and G tran
 {: style="font-size: 80%; text-align: center;"}
 {: #fig6}
 
-The operation of composition essentially consists in checking transitions in both input transducers and adding an arc to the output graph whenever the output label of the first transducer matches the input of the second one. This creates a mapping between the input of $T_1$ and the output of $T_2$. A visual example, also from [[2]](#references), is shown in [Figure 7](#fig7).
+The operation of composition essentially consists in checking transitions in both input transducers and adding an arc to the output graph whenever the output label of the first transducer matches the input of the second one. This creates a mapping between the input of $T_1$ and the output of $T_2$. A visual example, also from [[2]](#references), is shown in [Figure 7](#fig7). It works like with [function composition](https://en.wikipedia.org/wiki/Function_composition), where the composition $(f\circ g)(x)$ of function $f$ with function $g$ is equal to $f(g(x))$.
 
 ![composition](/assets/images/composition.png)  
 **Figure 7:** Example of a basic transducer composition [[1]](#references). The upper left transducer is $T_1$, the upper right one is $T_2$, and the graph below them is the result.
