Minor corrections to posts

--- a/_posts/2020-07-21-asr-wfst.md
+++ b/_posts/2020-07-21-asr-wfst.md
@@ -106,7 +106,7 @@ Below is a visual example of graph growth with composition of H, C, L and G tran
 {: style="font-size: 80%; text-align: center;"}
 {: #fig6}
 
-The operation of composition essentially consists in checking transitions in both input transducers and adding an arc to the output graph whenever the output label of the first transducer matches the input of the second one. This creates a mapping between the input of $T_1$ and the output of $T_2$. A visual example, also from [[2]](#references), is shown in [Figure 7](#fig7). It works like with [function composition](https://en.wikipedia.org/wiki/Function_composition), where the composition $(f\circ g)(x)$ of function $f$ with function $g$ is equal to $f(g(x))$.
+The operation of composition essentially consists in checking transitions in both input transducers and adding an arc to the output graph whenever the output label of the first transducer matches the input of the second one. This creates a mapping between the input of $T_1$ and the output of $T_2$. A visual example, also from [[2]](#references), is shown in [Figure 7](#fig7). It works like [function composition](https://en.wikipedia.org/wiki/Function_composition), where the composition $(f\circ g)(x)$ of function $f$ with function $g$ is equal to $f(g(x))$.
 
 ![composition](/assets/images/composition.png)  
 **Figure 7:** Example of a basic transducer composition [[1]](#references). The upper left transducer is $T_1$, the upper right one is $T_2$, and the graph below them is the result.
